--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -6,7 +6,23 @@
     .toggle{
         position: absolute;
         right: 0%;
-        font-size: 30px;
+        font-size: 5vh;
+        top: 50%;
+    }
+    .toggle-chat{
+        position: absolute;
+        left: 0%;
+        font-size: 5vh;
+        top: 50%;
+    }
+    #mascot{
+        position: absolute;
+        height: 20%;
+        top:70%;
+        z-index: 25;
+    }
+    .mascot{
+        animation: mascot 6s 1;
     }
     .contain{
         height: 100%;
@@ -17,10 +33,10 @@
             height: 90vh;
             .graf{
                 position: relative;
-                top:20%;
+                top:10%;
                 left: 10%;
                 width: 100%;
-                height: 50%;
+                height: 60%;
                 .graf-clue{
                     width: auto;
                     max-height: 100%;
@@ -44,7 +60,7 @@
                     background-size: 100% 100%;
                     position: relative;
                     top: 40%;
-                    left: 65%;
+                    left: 68%;
                     height: 13%;
                     width: 20%;
                 }
@@ -72,5 +88,24 @@
                 }
             }
         }
+    }
+}
+
+@keyframes mascot {
+    0%{
+        left : 0%;
+    }
+    45%{
+        transform: scaleX(1);
+    }
+    50%{
+        left : 70%;
+        transform: scaleX(-1);
+    }
+    95%{
+        transform: scaleX(-1);
+    }
+    100%{
+        left : 0%;
     }
 }
