--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -78,7 +78,7 @@
                 width: 27%;
                 height: 23%;
                 .clue{
-                    background-image: url('../../assets/images/my0.png');
+                    background-image: url('../../assets/images/slock.jpeg');
                     background-size: 100% 100%;
                     position: relative;
                     top: 7%;
