--- a/src/components/photo/Photo.scss
+++ b/src/components/photo/Photo.scss
@@ -16,7 +16,7 @@
         right: -15%;
     }
     .clue{
-        background-image: url('../../assets/images/my0.png');
+        background-image: url('../../assets/images/slock.jpeg');
         background-size: 100% 100%;
         position: absolute;
         top: 7%;
