--- a/src/components/answer/Answer.scss
+++ b/src/components/answer/Answer.scss
@@ -20,28 +20,65 @@
         text-align: center;
         font-size: 5vh;
         position: absolute;
+        border: solid;
         top: 13%;
         left: 13.5%;
         height: 12.5%;
         width: 72.5%;
         border-radius: 5px;
     }
+    .t-box:focus{
+        outline: none;
+    }
     .sub{
-        background-color: transparent;
         border: solid 1px #f59455;
         position: absolute;
         top: 61.8%;
         left: 81.5%;
         height: 22.2%;
         width: 5.5%;
-        border-radius: 5px;
     }
     .sub:focus{
         border: none;
         outline: none;
     }
-    .t-box:focus{
-        border: none;
-        outline: none;
+    .inpp{
+        background-color: white;
+        position: absolute;
+        top: 32%;
+        left: 9.8%;
+        height: 55%;
+        width: 80%;
+        display: grid;
+        padding-left: 2%;
+        grid-template-columns: repeat(10, 8%);
+        grid-template-rows: repeat(4, 15%);
+        row-gap: 10%;
+        column-gap: 2%;
+        .butt{
+            background-color: #f0a5a5;
+            border-radius: 5px;
+            font-size: 2vh;
+            font-weight: bold;
+            padding: 0px;
+        }
+        .enter{
+            grid-column: 10/11;
+            grid-row: 3/5;
+            background-color: #f59455;
+            p{
+                text-orientation: upright;
+                writing-mode: vertical-rl;
+                margin: 0px;
+            }
+        }
+        .reset{
+            grid-column: 8/10;
+            grid-row: 4/5;
+            background-color: #d27cea;
+        }
+        .butt:focus{
+            outline: none;
+        }
     }
 }
