--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -32,16 +32,24 @@
             grid-column: 1/2;
             height: 90vh;
             .graf{
-                position: relative;
-                top:10%;
-                left: 10%;
-                width: 100%;
-                height: 60%;
+                border : solid;
+                background-color: white;
+                position: absolute;
+                top:20%;
+                left: 15%;
+                width: 18%;
+                height: 50%;
+                z-index: 40;
+                transition: all 0.5s;
                 .graf-clue{
-                    width: auto;
-                    max-height: 100%;
+                    width: 100%;
+                    height: auto;
                     object-fit: contain;
                 }
+            }
+            .big-n{
+                width: 25%;
+                height: 70%;
             }
         }
         #door{
@@ -69,22 +77,33 @@
         #photo{
             grid-column: 3/4;
             height: 90vh;
-            .p-img{
-                background-image: url('../../assets/images/photo.png');
-                background-size: 100% 100%;
+            .pho-3{
+                margin-left: 15%;
+            }
+            .no-p2{
+                left: 37%;
+            }
+        }
+        .p-img{
+            background-image: url('../../assets/images/photo.png');
+            background-size: 100% 100%;
+            position: relative;
+            top:30%;
+            left: 10%;
+            width: 27%;
+            height: 23%;
+            .clue{
                 position: relative;
-                top:30%;
-                left: 10%;
-                width: 27%;
-                height: 23%;
-                .clue{
-                    background-image: url('../../assets/images/slock.jpeg');
-                    background-size: 100% 100%;
-                    position: relative;
-                    top: 7%;
-                    left: 9%;
-                    height: 86%;
-                    width: 81.9%;
+                top: 7%;
+                left: 9%;
+                height: 86%;
+                width: 81.9%;
+                .clue-img{
+                    /*width: auto;
+                    max-height: 100%;
+                    object-fit: contain;*/
+                    height: 100%;
+                    width: 100%;
                 }
             }
         }
