--- a/src/components/photo/Photo.scss
+++ b/src/components/photo/Photo.scss
@@ -16,12 +16,17 @@
         right: -15%;
     }
     .clue{
-        background-image: url('../../assets/images/slock.jpeg');
-        background-size: 100% 100%;
         position: absolute;
         top: 7%;
         left: 9%;
         height: 86%;
         width: 81.9%;
+        .clue-img{
+            /*width: auto;
+            max-height: 100%;
+            object-fit: contain;*/
+            height: 100%;
+            width: 100%;
+        }
     }
 }
