--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.grey-1{
+  color: #444;
+}
+
+.grey-2{
+  color: #888
+}
+
+.grey-3{
+  color: #ccc
+}
