--- a/src/components/doorboard/Doorboard.scss
+++ b/src/components/doorboard/Doorboard.scss
@@ -1,5 +1,11 @@
 @import '../../super.scss';
 
+$purple_0 : 'rgba(109,113,201,0)';
+$purple_shade : 'rgba(109,113,201,0.85)';
+
+$grey_0 : rgba(180,180,180,0);
+$grey_shade : rgba(100,100,100,1);
+
 #door-board{
     height: 90vh;
     background-color: $doorinfo-color;
@@ -89,7 +95,7 @@
     content: '';
     height: 18%;
     width:1%;
-    background-color: #6d71c9;
+    background-color: $grey_shade;
     transition: 10ms;
 }
 
@@ -101,9 +107,11 @@
     height: 18%;
     width:35%;
     background-color: rgba(0,0,0,0);
-    background-image: linear-gradient(to right,rgba(109,113,201,0.85), rgba(109,113,201,0),rgba(109,113,201,0));
+    background-image: linear-gradient(to right, $grey_shade , $grey_0,$grey_0);
 }
 
 .door-info:hover{
-    color:#E2BCEB;
+  color: #fefefe;
 }
+
+
