--- a/src/components/doorboard/Doorboard.scss
+++ b/src/components/doorboard/Doorboard.scss
@@ -11,14 +11,18 @@
     overflow-x: hidden;
     .toggle-2{
         position: fixed;
-        font-size: 5vh;
-        color: white;
-        right: -1.5%;
+        font-size: 4vh;
+        right: -2.5%;
         transition: all 0.5s;
         top: 50%;
+        background-color: white;
+        border-radius: 0px 5px 5px 0px;
+        width: 2.5%;
+        height: 5.5vh;
+        text-align: center;
     }
     .togg-tra{
-        right: 20.5%;
+        right: 19.3%;
     }
     .door-info{
         width: 100%;
@@ -27,20 +31,19 @@
         justify-content: space-between;
         align-items: center;
         font-size: 18px;
+        padding-left: 15%;
         .door{
             font-size: 6vh;
-            //color: #f09595;
+            color: #ffffff;
         }
         .info{
             .door-name{
                 //color: #f09595;
                 margin-bottom: 1vh;
-                animation: text 0.5s 1;
             }
             .points{
                 color: #6d71c9;
                 margin-bottom: 0px;
-                animation: text 0.5s 1;
             }
             .tex{
                 font-size: 0vh;
@@ -58,12 +61,18 @@
             }
         }
     }
+    .door-info:hover{
+        background-image: linear-gradient(to right,rgba(109,113,201,0.85), rgba(109,113,201,0),rgba(109,113,201,0), rgba(109,113,201,0));
+        color:#E2BCEB;
+    }
 }
 .bor{
     width: 0%;
+    border-left: none;
 }
 .bor-tra{
     width: 22%;
+    border-left: solid 0.2vw #6d71c9;
 }
 
 #door-board::-webkit-scrollbar {
@@ -82,28 +91,4 @@
 
 .color-purple{
     color: #A57BAF;
-}
-
-.door-info::before{
-    position: absolute;
-    content: '';
-    height: 18%;
-    width:1%;
-    background-color: #6d71c9;
-    transition: 10ms;
-}
-
-.door-info:hover::before{
-    transition: 10ms;
-    z-index: -1;
-    position: absolute;
-    content: '';
-    height: 18%;
-    width:35%;
-    background-color: rgba(0,0,0,0);
-    background-image: linear-gradient(to right,rgba(109,113,201,0.85), rgba(109,113,201,0),rgba(109,113,201,0));
-}
-
-.door-info:hover{
-    color:#E2BCEB;
 }
