--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -3,22 +3,40 @@
     width: 100%;
     background-image: url('../../assets/images/with\ florr.jpg');
     background-size: 100% 100%;
-    .toggle{
+    .door-btn{
         position: absolute;
         right: 0%;
-        font-size: 5vh;
+        font-size: 4vh;
         top: 50%;
+        background-color: white;
+        width: 2.5%;
+        height: 5.5vh;
+        text-align: center;
+        border-radius: 5px 0px 0px 5px;
+        opacity: 1px;
+        transition: all 0.5s;
+    }
+    .chat-btn{
+        position: fixed;
+        left: 0%;
+        bottom: 0%;
+        background-color: white;
+        width: 8%;
+        height: 4vh;
+        font-size: 2.5vh;
+        text-align: center;
+        border-radius: 0px 5px 0px 0px;
+        opacity: 1;
+        transition: all 0.5s;
     }
     .toggle-chat{
-        position: absolute;
-        left: 0%;
-        font-size: 5vh;
-        top: 50%;
+        opacity: 0;
     }
     #mascot{
         position: absolute;
         height: 20%;
-        top:70%;
+        //top:70%;
+        bottom: 10%;
         z-index: 25;
     }
     .mascot{
