notice and clickable

--- a/src/components/doorboard/Doorboard.scss
+++ b/src/components/doorboard/Doorboard.scss
@@ -47,7 +47,7 @@ $grey_shade : rgba(100,100,100,1);
                 margin-bottom: 1vh;
             }
             .points{
-                color: #6d71c9;
+                //color: #6d71c9;
                 margin-bottom: 0px;
             }
             .tex{
