--- a/src/components/answer/Answer.scss
+++ b/src/components/answer/Answer.scss
@@ -70,6 +70,7 @@
                 text-orientation: upright;
                 writing-mode: vertical-rl;
                 margin: 0px;
+                margin-left: 15%;
             }
         }
         .reset{
