--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -50,39 +50,27 @@
             grid-column: 1/2;
             height: 90vh;
             .graf{
-                border : solid;
+                border : solid 1vh;
                 background-color: white;
                 position: absolute;
-                top:20%;
+                top:25%;
                 left: 15%;
                 width: 18%;
-                height: 50%;
                 z-index: 40;
                 transition: all 0.5s;
                 font-size: 2.8vh;
-                line-height: 3vh;
                 .p{
+                    margin-top: 1vh;
                     width: 100%;
-                    background-color: black;
-                    color: white;
-                    padding: 1vh;
-                    margin-bottom: 1vh;
-                }
-                .cont{
-                    width: 100%;
-                    height: inherit;
-                    .graf-clue{
-                        width: 100%;
-                        max-height: 100%;
-                        object-fit: contain;
-                    }
                 }
             }
             .big-n{
-                width: 27%;
-                height: 75%;
-                font-size: 4vh;
-                line-height: 4vh;
+                width: 36%;
+                border : solid 2vh;
+                font-size: 5.6vh;
+                left: 50%;
+                position: fixed;
+                margin-left: -18%;
             }
         }
         #door{
