add chat-fix chat-font

--- a/src/components/chat/src/Chat.css
+++ b/src/components/chat/src/Chat.css
@@ -3,6 +3,7 @@ div {
 }
 
 .chatApp {
+  font-size: 2.3vh;
   background-color: #212121;
   flex-grow: 1;
   overflow: auto;
@@ -21,14 +22,12 @@ div {
 
 .joinForm input {
   padding: 10px;
-  font-size: 15px;
   margin: 10px;
   width: 90%;
 }
 
 .joinForm button {
   margin: 10px;
-  font-size: 15px;
   padding: 10px;
   width: 100%;
   border: solid 1px black;
@@ -42,7 +41,6 @@ div {
   overflow-x: scroll;
   border: solid 1px black;
   border-radius: 50px;
-  font-size: 15px;
   flex-shrink: 0;
   width: 100%;
   color: #dcdcdc;
@@ -71,7 +69,7 @@ div {
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 1.25em;
   z-index: 0;
   padding-bottom: 30px;
 }
@@ -93,8 +91,8 @@ div {
   content: "";
   left: -5px;
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 1em;
+  height: 1em;
   top: 0.5em;
   background-color: #434343;
   color: #dedede;
@@ -123,8 +121,8 @@ div {
   content: "";
   right: -4px;
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 1em;
+  height: 1em;
   top: 0.5em;
   background-color: #434343;
   color: #dedede;
@@ -166,7 +164,7 @@ div {
   border: none;
   background-color: none;
   color: grey;
-  font-size: 18px;
+  font-size: 1.1em;
 }
 
 
@@ -204,4 +202,8 @@ div {
   width: 70px;
   background-color: #333333;
   color: #999;
+}
+
+.rotate-180{
+  transform: rotate(180deg);
 }
