--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,13 @@ code {
     monospace;
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
+.cursor-default{
+  cursor: default;
+}
+
 
 .grey-1{
   color: #444;
