--- a/src/components/chat/src/Chat.css
+++ b/src/components/chat/src/Chat.css
@@ -2,14 +2,32 @@ div {
   box-sizing: border-box !important;
 }
 
+@media only screen and (max-width: 1000px) {
+  #chat-heading{
+    font-size: 1.8vw;
+  }
+  .chatApp {
+    font-size: 1.5vw;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  #chat-heading{
+    font-size: 1.3vw;
+  }
+  .chatApp {
+    font-size: 1vw;
+  }
+}
+
 .chatApp {
-  font-size: 2.3vh;
   background-color: #212121;
   flex-grow: 1;
   overflow: auto;
 }
 
 .chat {
+  position: relative;
   height: 100%;
   overflow: hidden;
   display: flex;
@@ -58,6 +76,7 @@ div {
 }
 
 .chat-input {
+  position: relative;
   width: 100%;
   padding: 10px;
   margin-left: auto;
@@ -81,7 +100,6 @@ div {
   background-color: #434343;
   border-radius: 5px;
   max-width: 80%;
-  min-width: 30%;
   height: auto;
   margin: 5px 20px;
 }
@@ -89,7 +107,7 @@ div {
 .message::before {
   z-index: -1;
   content: "";
-  left: -5px;
+  left: -0.2em;
   position: absolute;
   width: 1em;
   height: 1em;
@@ -106,7 +124,6 @@ div {
   padding: 5px 10px;
   border-radius: 5px;
   max-width: 80%;
-  min-width: 30%;
   margin: 5px 15px;
 }
 
@@ -119,7 +136,7 @@ div {
 .my-message::before {
   z-index: -1;
   content: "";
-  right: -4px;
+  right: -0.2em;
   position: absolute;
   width: 1em;
   height: 1em;
@@ -152,9 +169,9 @@ div {
 #scroll-icon {
   color: #ababab;
   height: 20px;
-  left: 20%;
-  bottom: 100px;
-  position: fixed;
+  left: 27vw;
+  bottom: 14vh;
+  position: absolute;
 }
 
 #scrollbutton {
@@ -206,4 +223,12 @@ div {
 
 .rotate-180{
   transform: rotate(180deg);
+}
+
+.msg-icon{
+  color: #dedede;
+  right: 2vw;
+  top:auto;
+  bottom: 1.45em;
+  position: absolute;
 }
