--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -15,13 +15,26 @@
             width: 100%;
         }
     }
+    .full-screen{
+        position: fixed;
+        background-color: white;
+        border-radius: 5px;
+        text-align: center;
+        font-size: 4.9vh;
+        opacity: 0.5;
+        width: 7vh;
+        height: 7vh;
+        bottom: 0%;
+        z-index: 2;
+        right: 0%;
+    }
     .door-btn{
         position: absolute;
         right: 0%;
         font-size: 4.9vh;
         top: 50%;
         background-color: white;
-        width: 3%;
+        width: 7vh;
         height: 7vh;
         text-align: center;
         border-radius: 10px 0px 0px 10px;
