--- a/src/components/answer/Answer.scss
+++ b/src/components/answer/Answer.scss
@@ -3,7 +3,7 @@
     background-size: 100% 100%;
     position: fixed;
     left: 50%;
-    margin-left: -20%;
+    margin-left: -22.5%;
     top : 15%;
     z-index: 50;
     width: 45%;
@@ -11,7 +11,7 @@
     .close{
         color: black;
         font-size: 7vh;
-        position: relative;
+        position: absolute;
         top : 2%;
         right: -10%;
     }
