--- a/src/super.scss
+++ b/src/super.scss
@@ -1,4 +1,4 @@
 $navbar-color : #142e39;
 //$doorinfo-color : #091115;
 $doorinfo-color : rgba(0,0,0,0.85);
-$bubble-color : #bfc0c0;
+$bubble-color : #ffffff;
