--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -71,16 +71,16 @@
         opacity: 0;
     }
     .mascot-hint{
-        width: 100%;
         position: fixed;
-        bottom: 10%;
-        height: 30%;
-        z-index: 25;
+        bottom: 6%;
+        height: 50%;
+        width: 30%;
+        z-index: 10;
         .bulb{
             position: absolute;
             color: gold;
-            bottom: 50%;
-            left: 6%;
+            bottom: 65%;
+            left: 43%;
             font-size: 7vh;
             animation: hint 1s infinite;
             z-index: 26;
@@ -90,11 +90,12 @@
             background-color: $bubble-color;
             text-align: center;
             border-radius: 5px;
-            bottom: 60%;
-            left: 6%;
-            z-index: 26;
+            bottom: 70%;
+            left: 41%;
+            box-shadow: 0px -1px 5px 0.5px rgba(0,0,0,0.75);
+            z-index: 50;
             padding: 1vh;
-            width: 20%;
+            width: 50%;
             height: auto;
             p{
                 margin: 0px;
@@ -118,7 +119,8 @@
         #mascot{
             position: absolute;
             bottom: 0%;
-            height: 65%;
+            height: 75%;
+            left: 10%;
             //top:70%;
             z-index: 25;
         }
@@ -193,10 +195,11 @@
             background-image: url('../../assets/images/photo.png');
             background-size: 100% 100%;
             position: relative;
-            top:30%;
+            top:25%;
             left: 10%;
             width: 27%;
             height: 23%;
+            z-index: 40;
             .clue{
                 position: relative;
                 top: 7%;
