fix fullscreen btn

--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -27,6 +27,9 @@
         bottom: 0%;
         z-index: 2;
         right: 0%;
+        .point{
+            transform: rotateZ(45deg);
+        }
     }
     .refresh-screen{
         position: fixed;
