--- a/src/components/reload/Reload.scss
+++ b/src/components/reload/Reload.scss
@@ -1,8 +1,31 @@
 .reload{
+    z-index: 1000;
+    height: 100vh;
+    background-color: #212121;
     display: block;
     position: relative;
-    top:25vh;
+    color: #eee;
+    font-weight: 300;
+    font-size: 20px;
+    letter-spacing: 2px;
+    padding-top:25vh;
     .r-btn{
         font-size: 50px;
     }
+}
+
+@media screen and (orientation: landscape){
+    .rotate{
+       display: none;
+    }
+}
+
+@media screen and (orientation: portrait){
+    .rotate{
+        display: block;
+    }
+}
+
+.rotate{
+    z-index: 1000;
 }
