--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -5,17 +5,18 @@
     height: 10vh;
     color: white;
     .score{
-        margin-right: 3vw!important;
+        margin-right: 4vw!important;
+        font-weight: 400!important;
     }
     .name{
-        margin-right: 2vw!important;
+        margin-right: 0.1vw!important;
     }
     .tex{
         align-self: center;
         text-align: center;
         margin: 0;
-        font-size: 3vh;
-        font-weight: bold;
+        font-size: 2.8vh;
+        font-weight: 500;
     }
     .prof-img{
         border-radius: 50%;
