--- a/src/components/doorboard/Doorboard.scss
+++ b/src/components/doorboard/Doorboard.scss
@@ -61,7 +61,8 @@ $grey_shade : rgba(100,100,100,1);
         .img-cont{
             width: 30%;
             .winner-img{
-                height: 8vh;
+                height: 7vh;
+                margin-bottom: 1vh;
                 border-radius: 50%;
             }
             .name{
